--- a/training/bib/biblio.bib
+++ b/training/bib/biblio.bib
@@ -11,3 +11,12 @@
   file     = {Vieilledent2018-BiologicalConservation.pdf:Articles/Vieilledent2018-BiologicalConservation.pdf:PDF;Vieilledent2018-BiologicalConservation-SM.pdf:Articles/Vieilledent2018-BiologicalConservation-SM.pdf:PDF},
   keywords = {Biodiversity, Climate-change, Deforestation, Forest-fragmentation, Madagascar, Tropical forest},
 }
+
+@Manual{Vieilledent2014,
+  author = {Ghislain Vieilledent and Cory Merow and Jérôme Guélat and Andrew M. Latimer and Marc Kéry and Alan E. Gelfand and Adam M. Wilson and Frédéric Mortier and John A. {Silander Jr.}},
+  title  = {{hSDM: hierarchical Bayesian species distribution models}},
+  year   = {2014},
+  note   = {R package version 1.4},
+  doi    = {10.5281/zenodo.594920},
+  url    = {http://CRAN.R-project.org/package=hSDM},
+}
