--- a/training/training.Rmd
+++ b/training/training.Rmd
@@ -19,7 +19,8 @@ knitr::opts_chunk$set(
 	echo=TRUE,
 	message=FALSE,
 	warning=FALSE,
-	cache=TRUE
+	cache=TRUE,
+	fig.align="center"
 )
 knitr::opts_knit$set(
   root.dir=rprojroot::find_rstudio_root_file()
@@ -28,7 +29,7 @@ knitr::opts_knit$set(
 
 ## Introduction
 
-```{r causes, echo=FALSE, fig.cap="(ref:cap-causes)", out.width="\\textwidth"}
+```{r causes, echo=FALSE}
 knitr::include_graphics("training/figures/causes.jpg")
 ```
 
@@ -216,9 +217,11 @@ head(data_train)
 
 We propose to use the **Binomial iCAR** model [@Vieilledent2014] to estimate the deforestation probability of a pixel given a set of environmental variables. The Binomial iCAR model is a linear Binomial logistic regression model including an intrinsic Conditional Autoregressive (iCAR) process to account for the spatial autocorrelation of the observations. Parameter inference is done in a hierarchical Bayesian framework. The `.model_binomial_iCAR()` function from the `forestatrisk` module includes a Metropolis-within-Gibbs algorithm written in pure C code to reduce computation time.
 
-![Bayes](figures/Bayes.jpg)
+```{r Bayes, echo=FALSE}
+knitr::include_graphics("training/figures/Bayes.jpg")
+```
 
-**Figure caption:** Parameter inference is done in a hierarchical Bayesian framework, which relies on the [Bayes' theorem](https://en.wikipedia.org/wiki/Bayes'_theorem) named after [Reverend Thomas Bayes](https://en.wikipedia.org/wiki/Thomas_Bayes). Each parameter has a prior and an approximated posterior probability distribution from which we can compute the mean, standard deviation, credible intervals at 95%, etc.
+Figure caption: **Parameter inference is done in a hierarchical Bayesian framework.** Bayesian statistics rely on the [Bayes' theorem](https://en.wikipedia.org/wiki/Bayes'_theorem) named after [Reverend Thomas Bayes](https://en.wikipedia.org/wiki/Thomas_Bayes). Each parameter has a prior and an approximated posterior probability distribution from which we can compute the mean, standard deviation, credible intervals at 95%, etc.
 
 For the deforestation process it is _**very important to take into account the spatial autocorrelation of the process**_ with spatial random effects. Indeed, the selected fixed environmental variables are not able to fully explain the spatial variability of the deforestation process, especially when working at large geographical scales, such as the national or continental scale. Spatial random effects allow estimating a higher/lower probability of deforestation in a particular region (associated to **unmeasurable** or **unknow** factors) that is different from the mean probability of deforestation derived from the environmental factors included in the model. The Binomial iCAR model can be described as follow:
 
@@ -257,9 +260,11 @@ $V_{\rho}$: variance of the spatial random effects.
   
 $n_j$: number of neighbors for spatial entity $j$.
 
-![iCAR process](figures/iCAR.png)
+```{r iCAR_process, echo=FALSE}
+knitr::include_graphics("training/figures/iCAR.png")
+```
 
-**Figure caption:** Representation of the neighborhood for the intrinsic conditional autoregressive (iCAR) process. Target spatial cell $j$ has 8 neighbors in this case. Several observations (black points, equivalent to pixel centers in our case) can be located in each spatial cell. Deforestation probability in one spatial cell $j$ depends on deforestation probability in neighboring cells.
+Figure caption: **Representation of the neighborhood for the intrinsic conditional autoregressive (iCAR) process.** Target spatial cell $j$ has 8 neighbors in this case. Several observations (black points, equivalent to pixel centers in our case) can be located in each spatial cell. Deforestation probability in one spatial cell $j$ depends on deforestation probability in neighboring cells.
 
 ### Spatial cells
 
